--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
   <div class="container">
-    <div class="logo">
+    <a class="logo" href="#">
       <div>Pan de</div>
       <div>Casa</div>
-    </div>
+    </a>
     <div class="menu">
       <ul class="navegacion">
         <li><a href="#">Home</a></li>
@@ -49,17 +49,6 @@
             <li><a href="#">Registro</a></li>
           </ul>
         </li>
-        <div class="cart-container">
-          <button class="button">
-            <span>al carrito</span>
-            <div class="cart">
-              <svg viewBox="0 0 36 26">
-                <polyline points="1 2.5 6 2.5 10 18.5 25.5 18.5 28.5 7.5 7.5 7.5"></polyline>
-                <polyline points="15 13.5 17 15.5 22 10.5"></polyline>
-              </svg>
-            </div>
-          </button>
-        </div>
       </ul>
       <div class="buscador">
         <form class="nosubmit">
@@ -68,14 +57,15 @@
       </div>
       <div class="clear"></div>
     </div>
-    <div class="foto">
-      <img class="foto-img" src="img/pan.jpg" alt="pan">
+    <div class="wrapper-carrusel">
+      <ul class="carrusel">
+        <li class="img3 nosemueve"><img src="img/foto1.jpg" /></li>
+        <li class="img2 nosemueve"><img src="img/foto2.jpg" /></li>
+        <li class="img1 nosemueve"><img src="img/foto3.jpg" /></li>
+      </ul>
     </div>
     <div class="slogan">
-      <div class="hacemos">Hacemos nuestro pan</div>
-      <div class="alma">con Alma,</div>
-      <div class="materias">con las materias primas de la mejor</div>
-      <div class="calidad">calidad</div>
+      <div class="slogan-text">Hacemos nuestro pan con Alma, con las materias primas de la mejor calidad</div>
     </div>
     <div class="novedades">
       <div class="flecha botando">
@@ -89,12 +79,8 @@
         <li class="novedades-list-item">Nuestro pan del día</li>
         <li class="novedades-list-item">Oferta dos por uno</li>
       </ul>
-      <div class="wrapper-carrusel">
-        <ul class="carrusel">
-          <li class="img3 nosemueve"><img src="img/foto1.jpg" /></li>
-          <li class="img2 nosemueve"><img src="img/foto2.jpg" /></li>
-          <li class="img1 nosemueve"><img src="img/foto3.jpg" /></li>
-        </ul>
+      <div class="foto">
+        <img class="foto-img" src="img/pan.jpg" alt="pan">
       </div>
       <div class="flecha-derecha botando">
         <a href="#top">
